# trjp

./: LICENSE.md  README.md  pyproject.toml
examples/fa/: FA_data.npy  fa_model.py  fa_plot_bbe_tt.py  fa_plot_prop.py  fa_rjmcmc.py  generate_fa_NUTS_pySMC_posteriors.py  plot_FA_lq_af_rq_rjmcmc_trace_pyplot_b_5.py
examples/sas/: plot_sas_mp_trace.py  plot_sinharcsinh_prop_affine_random.py  plot_sinharcsinh_prop_all.py  run_RJMCMC_sinharcsinh_traces_af.py  run_RJMCMC_sinharcsinh_traces_nf.py  run_RJMCMC_sinharcsinh_traces_perfect.py
examples/sas/sas_rjmcmc_chains/: af_sas_rjmcmc_theta_run0.npy  af_sas_rjmcmc_theta_run1.npy  af_sas_rjmcmc_theta_run2.npy  af_sas_rjmcmc_theta_run3.npy  af_sas_rjmcmc_theta_run4.npy  af_sas_rjmcmc_theta_run5.npy  af_sas_rjmcmc_theta_run6.npy  af_sas_rjmcmc_theta_run7.npy  af_sas_rjmcmc_theta_run8.npy  af_sas_rjmcmc_theta_run9.npy  perfect_sas_rjmcmc_theta_run0.npy  perfect_sas_rjmcmc_theta_run1.npy  perfect_sas_rjmcmc_theta_run2.npy  perfect_sas_rjmcmc_theta_run3.npy  (+16 more)
examples/vs/: SMCLogZ_BlockVS_indiv.txt  bbe_affine.py  bbe_cnf.py  bbe_indiv_tf.py  bbe_naive.py  plot_bbe_violin_500_4000.py  plot_bbe_violin_all.py  sample_indiv_smc.py  six_dim_rr.csv
rjlab/distributions/: __init__.py  base.py  special.py
rjlab/proposals/: __init__.py  base.py  standard.py  vs_proposals.py
rjlab/samplers/: __init__.py  mcmc.py  smc.py
rjlab/transforms/: __init__.py  base.py  ptunif.py
rjlab/utils/: __init__.py  barycenter.py  kde.py  linalgtools.py  progressbar.py
rjlab/variables/: __init__.py  base.py  block.py  model.py  other.py
